# activity-monitor-py

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: settings.example.toml
src/activity_planner/: __init__.py  activities_page.py  activity_store.py  analytics_page.py  app.py  dashboard.py  database_manager.py  deadlines_page.py  gemini_planner.py  keys.py  logging_setup.py  models.py  notification_manager.py  planner_page.py  pomodoro.py  privacy_page.py  repositories.py  rule_manager.py  seed.py  settings_page.py  timer_service.py  toast.py  updater.py  win_activity_monitor.py
tests/: conftest.py  test_activity_repo.py  test_analytics.py  test_auto_detect_setting.py  test_deadline_repo.py  test_gemini_client.py  test_settings_persistence.py  test_smoke.py  test_timer_service.py  test_timetable_logic.py  test_timetable_repo.py  test_title_categorizer.py
