[tool.poetry]
name = "activity-planner"
version = "0.1.0"
description = "Windows desktop Activity Tracking App (MVP scaffold)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "activity_planner", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.7.0"
matplotlib = "^3.9.0"
sqlite-utils = "^3.35"
python-dateutil = "^2.9.0.post0"
# Gemini integration placeholder dependencies
httpx = "^0.27.0"
psutil = "^5.9.8"
pywin32 = {version = "^306", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-qt = "^4.4.0"
black = "^24.4.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
